--- a/404.md
+++ b/404.md
@@ -12,8 +12,8 @@ I can't find this page! Maybe it existed at some point? Maybe not? Email me if y
 
     <div class="row-fluid">
         <div class="span5">
-            Blue Ham<br/>
-            Email: WOOFWOOF@goodboy.com<br/>
+            Anne Sophie Lassen<br/>
+            Email: assl.eco@cbs.dk<br/>
         </div>
     </div>
 </div>
